fix: table scroll

--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
   body {
     padding-top: 100px;
   }
+  #wrap {
+    width: 400px;
+  }
   </style>
-  <div id="main"></div>
+  <div id="wrap">
+    <div id="main"></div>
+  </div>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6"></script>
   <script src="./main.js"></script>
 </body>
