--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
   <div id="wrap">
     <div id="main"></div>
   </div>
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6"></script>
-  <script src="./main.js"></script>
+  <script type="module" src="./src/demo.tsx"></script>
 </body>
 </html>
