--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   body {
     padding-top: 100px;
   }
+  #wrap {
+    width: 400px;
+  }
   </style>
   <div id="wrap">
     <div id="main"></div>
