--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   <div id="wrap">
     <div id="main"></div>
   </div>
-  <script type="module" src="./src/demo.tsx"></script>
+  <script type="module" src="./demo.tsx"></script>
 </body>
 </html>
